--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
         <div class="container">
             <div class="row" style="color: #fff;">
                 <div class="col-lg-3">
-                    <a class="navbar-brand" href="#"><img src="./icon/brand.png" style="width: 15%;height: 20%;" alt=""></a>
+                    <a class="navbar-brand" href="#"><img src="./icon/brand.png" style="width: 65px" alt=""></a>
                     <p style="padding: 15px 0;opacity: 0.8;">Travell the place your always 
                         dreaming about easier.</p>
                 </div>
